<resources>
    <!-- Strings related to login_nav_graph -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_start">startActivity</string>

    <string name="app_name">TourAlbum</string>

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>


    <!-- Strings related to main_nav_graph -->
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="Map">Map</string>
    <string name="Gallery">Gallery</string>
    <string name="Profile">Profile</string>
    <string name="username">Username:</string>
    <string name="achievements">Achievements:</string>
    <string name="locations_visited">Locations Visited:</string>
    <string name="imageDescription">Local/Data/BlaBla</string>
    <string name="mapcamera">mapCamera</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description">Description</string>
    <string name="type_description">Type description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
</resources>